deploy/kubernetes/llmd-base/inferencepool-llama.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-llama3-8b-instruct-epp
spec:
  selector:
    app: vllm-llama3-8b-instruct-epp
  ports:
  - protocol: TCP
    port: 9002
    targetPort: 9002
    appProtocol: http2
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-d-inference-scheduler-llama3-8b
  labels:
    app: vllm-llama3-8b-instruct-epp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm-llama3-8b-instruct-epp
  template:
    metadata:
      labels:
        app: vllm-llama3-8b-instruct-epp
    spec:
      serviceAccountName: vllm-llama3-8b-instruct-epp
      terminationGracePeriodSeconds: 130
      containers:
      - name: epp
        image: ghcr.io/llm-d/llm-d-router-endpoint-picker:v0.10.0
        imagePullPolicy: Always
        args:
        - --pool-name
        - vllm-llama3-8b-instruct
        - --pool-namespace
        - default
        - --pool-group
        - inference.networking.k8s.io
        - --v
        - '4'
        - --zap-encoder
        - json
        - --grpc-port
        - '9002'
        - --grpc-health-port
        - '9003'
        - --config-file
        - /config/default-plugins.yaml
        - --metrics-endpoint-auth=false
        ports:
        - containerPort: 9002
        - containerPort: 9003
        - name: metrics
          containerPort: 9090
        livenessProbe:
          grpc:
            port: 9003
            service: inference-extension
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          grpc:
            port: 9003
            service: inference-extension
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: plugins-config-volume
          mountPath: /config
      volumes:
      - name: plugins-config-volume
        configMap:
          name: plugins-config
