deploy/kubernetes/llmd-base/dest-rule-epp-llama.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: epp-llama-8b-insecure-tls
spec:
  host: vllm-llama3-8b-instruct-epp
  trafficPolicy:
      tls:
        mode: SIMPLE
        insecureSkipVerify: true
