deploy/kubernetes/llmd-base/dest-rule-epp-phi4.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: epp-phi4-mini-insecure-tls
spec:
  host: vllm-phi4-mini-epp
  trafficPolicy:
      tls:
        mode: SIMPLE
        insecureSkipVerify: true
