deploy/kubernetes/llmd-base/httproute-phi4-pool.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vsr-phi4-mini
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: inference-gateway
  rules:
  - backendRefs:
    - group: inference.networking.k8s.io
      kind: InferencePool
      name: vllm-phi4-mini
    matches:
    - path:
        type: PathPrefix
        value: /
      headers:
        - type: Exact
          name: x-selected-model
          value: 'phi4-mini'
    timeouts:
      request: 300s
